WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
226680
[GTK] Kinetic scrolling interferes with gestures
https://bugs.webkit.org/show_bug.cgi?id=226680
Summary
[GTK] Kinetic scrolling interferes with gestures
Alice Mikhaylenko
Reported
2021-06-05 05:02:05 PDT
Haven't bisected, but probably a fallout from
https://bugs.webkit.org/show_bug.cgi?id=212324
Attachments
Patch
(4.54 KB, patch)
2021-07-05 12:39 PDT
,
Alice Mikhaylenko
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alice Mikhaylenko
Comment 1
2021-07-05 12:39:09 PDT
Created
attachment 432895
[details]
Patch Patch. I'm not sure about the change in PageClientImpl.cpp, how important is it to have correct x/y for these? I"m also not sure where we get them from for scroll normally, as scroll events don't have coordinates on their own...
EWS Watchlist
Comment 2
2021-07-05 12:39:52 PDT
Thanks for the patch. If this patch contains new public API please make sure it follows the guidelines for new WebKit2 GTK+ API. See
https://trac.webkit.org/wiki/WebKitGTK/AddingNewWebKit2API
EWS
Comment 3
2021-07-05 14:15:35 PDT
Committed
r279571
(
239402@main
): <
https://commits.webkit.org/239402@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 432895
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug