[GTK] Kinetic scrolling interferes with gestures https://bugs.webkit.org/show_bug.cgi?id=226680

Patch by Alexander Mikhaylenko <alexm@gnome.org> on 2021-07-05
Reviewed by Michael Catanzaro.

Simulate scroll events that would stop scrolling when we're starting any touch
gesture. Since we don't have a way to do that on touchpad yet, just stop it when
starting a zoom or a navigation swipe gesture instead.

* UIProcess/API/gtk/PageClientImpl.cpp:
(WebKit::PageClientImpl::navigationGestureDidBegin):
* UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseZoomBegin):
(webkitWebViewBaseTouchDragBegin):
(webkitWebViewBaseConstructed):

Canonical link: https://commits.webkit.org/239402@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279571 268f45cc-cd09-0410-ab3c-d52691b4dbfc